# agentica

./: .gitignore  AGENTS.md  README.md  _update_versions.py  about-agentes.md  db.sqlite3  linkedIn.md  main.py  manage.py  pyproject.toml  tech_config.json
agentica/: asgi.py  settings.py  urls.py  wsgi.py
agentictemplates/: css.md  css.pt.md  daisyui.md  daisyui.pt.md  django.md  docker.md  docker.pt.md  fastapi.pt.md  flutter.pt.md  general.md  general.pt.md  go.md  html.pt.md  java.md  java.pt.md  javascript.md  javascript.pt.md  kotlin.md  kotlin.pt.md  laravel.md  laravel.pt.md  mongodb.md  mongodb.pt.md  mysql.md  next.js.md  next.js.pt.md  node.pt.md  php.md  php.pt.md  postgresql.md  python.pt.md  rails.md  redis.md  redis.pt.md  rust.pt.md  sass.md  sass.pt.md  scss.md  scss.pt.md  springboot.md  (+8 more)
agentictemplates/en/: angular.md  aspnetcore.md  astro.md  bash.md  blazor.md  cplusplus.md  csharp.md  dart.md  elasticsearch.md  express.md  fastapi.md  flask.md  flutter.md  html.md  jest.md  jquery.md  mariadb.md  nestjs.md  node.md  nuxt.js.md  playwright.md  python.md  react.md  ruby.md  rust.md  spring.md  sqlite.md  svelte.md  swift.md  tailwind.md  vite.md  vitest.md  vue.md
agentictemplates/pt/: angular.md  aspnetcore.md  astro.md  bash.md  blazor.md  cplusplus.md  csharp.md  dart.md  django.md  elasticsearch.md  express.md  flask.md  go.md  jest.md  jquery.md  mariadb.md  mysql.md  nestjs.md  nuxt.js.md  playwright.md  postgresql.md  rails.md  react.md  ruby.md  spring.md  sqlite.md  swift.md  vite.md  vitest.md
doc/: deploy-tutorial.md
generator/: admin.py  apps.py  code_examples_data.py  forms.py  models.py  template_data.py  tests.py  urls.py  version_fetcher.py  views.py
generator/migrations/: 0001_initial.py  0001_initial_models.py  0002_populate_initial_data.py  0003_technology_latest_version_and_more.py  0003_update_general_templates.py  0004_populate_version_sources.py  0005_fix_python_version_source.py  0006_remove_pt_templates.py
templates/: 404.html  base.html
(+5 files in other folders)
